[metadata]
name = norkyst
version = attr: norkyst.__version__
description = Python scripts for running and testing NorKyst models
author = Pål Næverlid Sævik
author_email = a5606@hi.no
url = https://github.com/norkyst/norkyst
license = MIT
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License


[options]
package_dir=
    =src
packages=find:
install_requires = file: requirements.txt
python_requires = >=3.7

[options.packages.find]
where=src
